Remove fifth vertex on a face.
Commit cc2dbdfe7bb1f5f13d9df1fb6ef632b4f842acdc of Nemoh.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,39 @@
-# Created by https://www.gitignore.io/api/python
+
+# Created by https://www.gitignore.io/api/python,fortran
+
+### Fortran ###
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
@@ -7,7 +42,6 @@ __pycache__/
 *$py.class
 
 # C extensions
-*.so
 
 # Distribution / packaging
 .Python
@@ -100,4 +134,4 @@ ENV/
 # mkdocs documentation
 /site
 
-# End of https://www.gitignore.io/api/python
+# End of https://www.gitignore.io/api/python,fortran
