Add clean to Makefile.

--- a/NemohCore/Makefile
+++ b/NemohCore/Makefile
@@ -1,3 +1,7 @@
 all:
 	f2py -c -m _Green Green_1.f90 Initialize_Green_2.f90 Green_2.f90 Build_matrices.f90
 	f2py -c -m _Wavenumber Wavenumber.f90
+
+clean:
+	rm -f *.o *.so *.mod
+	rm -rf __pycache__
