--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -14,7 +14,9 @@ requirements:
   run:
     - python
     - numpy
-    - meshmagick >=1.1
+    - attrs
+    - xarray
+    # - meshmagick >=1.1
 
 about:
   home: {{data.get('url')}}
