--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -14,8 +14,12 @@ requirements:
   run:
     - python
     - numpy
+    - scipy
     - attrs
+    - pandas
     - xarray
+    - matplotlib
+    - vtk
     # - meshmagick >=1.1
 
 about:
