WIP: theory manual.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -8,11 +8,13 @@ SPHINXPROJ    = capytaine
 SOURCEDIR     = .
 BUILDDIR      = _build
 
+all: html
+
 # Put it first so that "make" without argument is like "make help".
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-.PHONY: help Makefile
+.PHONY: help Makefile all show
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
