--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -10,9 +10,11 @@ requirements:
   build:
     - python
     - setuptools
+    - libgfortran=3.0
     - numpy
   run:
     - python
+    - libgfortran=3.0
     - numpy
     - scipy
     - attrs
