--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -25,7 +25,7 @@ requirements:
 
 build:
   entry_points:
-    - capytaine = capytaine.cli:main
+    - capytaine = capytaine.ui.cli:main
 
 about:
   home: {{data.get('url')}}
