--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,7 +16,8 @@ environment:
       - PYTHON_VERSION: "3.6"
         ARCH: 64
         MINICONDA: "C:\\Miniconda3-x64"
-        MINGW: "C:\\mingw-w64\\x86_64-7.2.0-posix-seh-rt_v5-rev1\\mingw64\\bin"
+        # MINGW: "C:\\mingw-w64\\x86_64-7.2.0-posix-seh-rt_v5-rev1\\mingw64\\bin"
+        MINGW: "C:\\mingw-w64\\x86_64-6.3.0-posix-seh-rt_v5-rev1\\mingw64\\bin"
 
 init:
     - echo %PYTHON_VERSION% %MINICONDA% %ARCH%
