Add matrices module to the documentation.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -14,7 +14,7 @@ all: html
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-.PHONY: help Makefile all show
+.PHONY: help Makefile all show test autodoc
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
@@ -23,6 +23,8 @@ help:
 
 show: html
 	@firefox _build/html/index.html &
+
+test: show
 
 autodoc:
 	rm -rf developer_manual/api/capytaine*.rst
