--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,4 +1,5 @@
 {% set data = load_setup_py_data()%}
+
 package:
   name: capytaine
   version: {{data.get('version')}}
@@ -15,7 +16,7 @@ requirements:
   run:
     - python
     - attrs
-    - libgfortran=3
+    - libgfortran=3  # [not win]
     - matplotlib
     - numpy
     - pandas
