--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: generic
 
 env:
   matrix:
-    - CONDA_PY=3.6
-    - CONDA_PY=3.7
+  - CONDA_PY=3.6 CONDA_NPY=1.15
+  - CONDA_PY=3.6 CONDA_NPY=1.16
+  - CONDA_PY=3.7 CONDA_NPY=1.15
+  - CONDA_PY=3.7 CONDA_NPY=1.16
 
 before_install:
   - sudo apt-get update
@@ -16,7 +18,7 @@ before_install:
   - conda config --set anaconda_upload no
   - conda update -q conda
   - conda install -q python=$CONDA_PY pip conda-build conda-verify anaconda-client
-  - conda install -q numpy
+  - conda install -q numpy=$CONDA_NPY
 
 install:
   - conda build .
