--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: generic
 
 env:
   matrix:
-  - CONDA_PY=3.6 CONDA_NPY=1.15
   - CONDA_PY=3.6 CONDA_NPY=1.16
-  - CONDA_PY=3.7 CONDA_NPY=1.15
   - CONDA_PY=3.7 CONDA_NPY=1.16
 
 before_install:
@@ -18,5 +16,5 @@ before_install:
   - conda install -q numpy=$CONDA_NPY conda-build
 
 install:
-  - conda build .
+  - conda build --python=$CONDA_PY --numpy=$CONDA_NPY .
 
