--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: generic
 
 env:
-  matrix:
-  - CONDA_PY=3.7 CONDA_NPY=1.17
-  - CONDA_PY=3.8 CONDA_NPY=1.18
-  - CONDA_PY=3.9 CONDA_NPY=1.19
+  - CONDA_PY=3.7 CONDA_NPY=1.16
+  - CONDA_PY=3.9 CONDA_NPY=1.20
 
 before_install:
   - sudo apt-get update
@@ -14,7 +12,7 @@ before_install:
   - export PATH=$HOME/miniconda/bin:$PATH
   - conda config --set always_yes true
   - conda config --set anaconda_upload no
-  - conda install -q numpy=$CONDA_NPY conda-build
+  - conda install -q python=$CONDA_PY numpy=$CONDA_NPY conda-build
 
 install:
   - conda build --python=$CONDA_PY --numpy=$CONDA_NPY .
