add method for importing meshes from meshio (#62)
Add method for importing meshes from meshio

Co-authored-by: Matthieu Ancellin <matthieu.ancellin@ens-paris-saclay.fr>

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -36,7 +36,8 @@ test:
     - pytest/*.py
     - pytest/**/*
   commands:
-    - pip install quadpy==0.14.11
+    - sudo apt-get install -y gmsh
+    - pip install quadpy==0.14.11 gmsh pygmsh
     - pytest
     - capytaine --help
 
