--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -18,7 +18,7 @@ requirements:
   run:
     - python
     - {{ pin_compatible('numpy') }}
-    - pandas
+    - pandas>=1.3
     - scipy
     - xarray
 
