--- a/.gitignore
+++ b/.gitignore
@@ -138,4 +138,8 @@ ENV/
 # mkdocs documentation
 /site
 
+# VS Code
+.vscode/*
+.vscode/settings.json
+
 # End of https://www.gitignore.io/api/python,fortran
