--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 examples/**/results*
 docs/_static/
 .pytest_cache/
+.vscode/
 
 # Created by https://www.gitignore.io/api/python,fortran
 
@@ -137,9 +138,5 @@ ENV/
 
 # mkdocs documentation
 /site
-
-# VS Code
-.vscode/*
-.vscode/settings.json
 
 # End of https://www.gitignore.io/api/python,fortran
