--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -14,8 +14,5 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - run: |
-        sudo apt update
-        sudo apt install gfortran
-        pip install numpy pytest hypothesis
-        pip install -e .
-        pytest
+        pip install numpy
+        make test
