Use a setup.py config for CI.

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -15,4 +15,5 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - run: |
         pip install numpy
-        make test
+        pip install -e .[ci]
+        pytest
