--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -7,13 +7,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10']
+        python-version: ['3.8', '3.10']
+        numpy-version: ['1.20', '1.23']
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - run: |
-        pip install numpy
+    - name: Install
+      run: |
+        pip install numpy==${{ matrix.numpy-version }}
         pip install -e .[ci]
-        pytest
+    - name: Test
+      run: pytest
