--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -7,8 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.10']
-        numpy-version: ['1.19', '1.22']
+        python-version: ['3.7', '3.10']
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v3
@@ -16,7 +15,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install
       run: |
-        pip install numpy==${{ matrix.numpy-version }}
+        pip install numpy
         pip install -e .[ci]
     - name: Test
       run: pytest
