--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,6 +1,6 @@
 name: Run test suite
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   run_tests:
@@ -9,7 +9,10 @@ jobs:
       matrix:
         python-version: ['3.7', '3.10']
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repository and submodules
+      uses: actions/checkout@v2
+      with:
+          submodules: recursive
     - uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
