Add alternative Green function as submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "capytaine/green_functions/libDelhommeau"]
 	path = capytaine/green_functions/libDelhommeau
 	url = https://github.com/capytaine/libDelhommeau
+[submodule "capytaine/green_functions/LiandWuNoblesse"]
+	path = capytaine/green_functions/LiandWuNoblesse
+	url = https://github.com/capytaine/LiangWuNoblesse_Green_function
