--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -22,7 +22,8 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install
-      run: |
-        pip install -e .[ci]
+      run: pip install -e .[ci]
     - name: Test
       run: pytest
+    - name: Import installed library
+      run: cd /tmp/ && python -c 'import capytaine'
