Check in CI that the package is correctly installed (#269)
The CI should use `pip install .` and not `pip install -e .` to correctly check that.

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -22,7 +22,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install
-      run: |
-        pip install -e .[ci]
+      run: pip install .[ci]
     - name: Test
       run: pytest
+    - name: Import installed library
+      run: cd /tmp/ && python -c 'import capytaine; print(capytaine.__version__)'
+    - name: Call command line tool
+      run: cd /tmp/ && capytaine --help
