--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -30,5 +30,5 @@ jobs:
     - name: Call command line tool
       run: cd /tmp/ && capytaine --help
     - name: Examples
-      # Only the one that do not require matplotlib or vtk
-      run: for f in custom_dofs.py haskind.py hydrostatics.py multibody.py; do python examples/$f; done
+      # Only the one that do not require matplotlib or vtk or meshmagick
+      run: for f in custom_dofs.py haskind.py multibody.py; do python examples/$f; done
