--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,11 @@ ENV/
 /site
 
 # End of https://www.gitignore.io/api/python,fortran
+pytest/io_legacy_cases/single_body/Hydrostatics.dat
+pytest/io_legacy_cases/single_body/KH.dat
+pytest/io_legacy_cases/single_body_list/Hydrostatics.dat
+pytest/io_legacy_cases/single_body_list/KH.dat
+pytest/io_legacy_cases/two_bodies_list/Hydrostatics_0.dat
+pytest/io_legacy_cases/two_bodies_list/Hydrostatics_1.dat
+pytest/io_legacy_cases/two_bodies_list/KH_0.dat
+pytest/io_legacy_cases/two_bodies_list/KH_1.dat
