[libDelhommeau] Tooling and optimization (#309)
Improve libDelhommeau-specific tooling, such as the Makefile and the benchmark code.
Major optimization of the performance of `collect_delhommeau_integrals`.

--- a/capytaine/green_functions/libDelhommeau/Makefile
+++ b/capytaine/green_functions/libDelhommeau/Makefile
@@ -1,63 +1,123 @@
-all: run
+### todo:
+###   - deps between src files so that we can run make -j ?
 
-DEBUG_COMPILE_OPTIONS=-g -Wall -Wextra -Wconversion -fimplicit-none -fbacktrace -ffree-line-length-0 -fcheck=all # -ffpe-trap=invalid,zero,overflow,underflow -finit-real=nan
-COMPILE_OPTIONS=$(DEBUG_COMPILE_OPTIONS) -cpp -fopenmp
-# COMPILE_OPTIONS=-cpp -fopenmp
 
-LIBDIR=./lib
+### ==============================================
+### dirs and flags
 
-SRC=src/float64.f90\
-src/constants.f90\
-src/Green_Rankine.f90\
-src/Delhommeau_integrals.f90\
-src/Green_wave.f90\
-src/matrices.f90
+NAME = delhommeau
+SRCDIR = src
+OBJDIR = obj
+LIBDIR = lib
 
+COMP = gfortran
+FLAGS = -Wall -fimplicit-none -ffree-line-length-0 -cpp -fopenmp
+DEBUG = -O0 -g -Wextra -Wconversion -fbacktrace -fcheck=all
+OPT = -O3 -march=native
+PROF = -pg
+
+### !! choose debug or optim
+# FLAGS += $(DEBUG)
+FLAGS += $(OPT)
+#FLAGS += $(PROF)
+
+
+### ==============================================
+### source selection
+
+SRC_S=src/float32.f90\
+      src/constants.f90\
+      src/Green_Rankine.f90\
+      src/Delhommeau_integrals.f90\
+      src/Green_wave.f90\
+      src/matrices.f90\
+      src/old_Prony_decomposition.f90
+
+SRC_D=src/float64.f90\
+      src/constants.f90\
+      src/Green_Rankine.f90\
+      src/Delhommeau_integrals.f90\
+      src/Green_wave.f90\
+      src/matrices.f90\
+      src/old_Prony_decomposition.f90
+
+### !! choose single or double comp.
+# SRC=$(SRC_S)
+SRC=$(SRC_D)
+
+### objs
 OBJ=$(SRC:.f90=.o)
+OBJ:=$(addprefix $(OBJDIR)/,$(OBJ))
+LIB_STATIC=$(LIBDIR)/lib$(NAME).a
+LIB_DYNAMIC=$(LIBDIR)/lib$(NAME).so
 
-%.o: %.f90
-	@mkdir -p $(LIBDIR)
-	gfortran $(COMPILE_OPTIONS) -J$(LIBDIR) -c $< -o $@
 
-# STATIC_LIB=$(LIBDIR)/libDelhommeau.a
-# $(STATIC_LIB): $(OBJ)
-# 	@mkdir -p $(LIBDIR)
-# 	ar r $(STATIC_LIB) $(OBJ)
-#
-# DYNAMIC_LIB=$(LIBDIR)/libDelhommeau.so
-# $(DYNAMIC_LIB): $(OBJ)
-# 	@mkdir -p $(LIBDIR)
-# 	gfortran -shared -fPIC $(COMPILE_OPTIONS) -o $(DYNAMIC_LIB) $(OBJ)
+### ==============================================
+### example
 
 EXAMPLES_SRC=examples/minimal/minimal_example.f90
 EXAMPLES_BIN=$(EXAMPLES_SRC:.f90=.bin)
 
-BENCHMARKS_SRC=\
-benchmarks/openmp/benchmark_omp.f90\
-benchmarks/tabulations/benchmark_tabulation.f90
 
-BENCHMARKS_BIN=$(BENCHMARKS_SRC:.f90=.bin)
+### ==============================================
+### benchmarks
+
+BENCH_SRC=benchmarks/openmp/benchmark_omp.f90\
+	  benchmarks/tabulations/benchmark_tabulation.f90\
+	  benchmarks/profiling/benchmark_profiling.f90
+BENCH_BIN=$(BENCH_SRC:.f90=.bin)
+
+
+### ==============================================
+### targets
+
+.PHONY: clean mrproper
+
+$(OBJDIR)/%.o: %.f90
+	$(COMP) $(FLAGS) -J$(OBJDIR) -c $< -o $@
 
 %.bin: %.f90 $(OBJ)
-	gfortran $(COMPILE_OPTIONS) -I$(LIBDIR) $^ -o $@
+	$(COMP) $(FLAGS) -J$(OBJDIR) -L$(LIBDIR) -l$(NAME) $^ -o $@
 
-run: clean $(EXAMPLES_BIN)
-	examples/minimal/minimal_example.bin
-	python examples/minimal/same_in_Capytaine.py
-	# benchmarks/tabulations/benchmark_tabulation.bin
+.init:
+	@mkdir -p $(OBJDIR)/$(SRCDIR)
+	@mkdir -p $(LIBDIR)
 
-# BENCHMARK_RESULTS_DIR = results/$(shell git rev-parse HEAD)
-BENCHMARK_RESULTS_DIR = results/$(shell git branch --show-current)
-BENCHMARK_RESULT      = $(BENCHMARK_RESULTS_DIR)/omp.csv
-$(BENCHMARK_RESULT): $(BENCHMARKS_BIN)
-	benchmarks/openmp/benchmark_omp.bin
-	mkdir -p $(BENCHMARK_RESULTS_DIR)
-	mv benchmark_results.csv $(BENCHMARK_RESULT)
+lib: .init $(LIB_STATIC) $(LIB_DYNAMIC)
 
-benchmark: clean $(BENCHMARK_RESULT)
-	python benchmarks/openmp/read_output.py
+$(LIB_STATIC): $(OBJ)
+	ar r $@ $^
+
+$(LIB_DYNAMIC): $(OBJ)
+	$(COMP) -shared -fPIC $(FLAGS) -o $@ $^
+
+example: lib $(EXAMPLES_BIN)
+
+benchmark: lib $(BENCH_BIN)
+
+run_min_ex: example
+	@$(EXAMPLES_BIN)
+	@echo ''
+	@python3 examples/minimal/minimal_example.py
+
+run_bench_tab: benchmark
+	@benchmarks/tabulations/benchmark_tabulation.bin
+
+run_bench_omp: benchmark
+	@benchmarks/openmp/benchmark_omp.bin
+	@mv benchmark_omp.csv benchmarks/openmp/benchmark_omp_$(shell git rev-parse --short HEAD)_$(shell git branch --show-current).csv
+	@python3 benchmarks/openmp/read_output.py
+
+# requires gprof2dot
+run_bench_prof: benchmark
+	@export OMP_NUM_THREADS=1 && benchmarks/profiling/benchmark_profiling.bin
+	@gprof benchmarks/profiling/benchmark_profiling.bin gmon.out > prof.txt
+	@gprof2dot < prof.txt > prof.dot && dot prof.dot -Tpng -o prof.png
+	@rm gmon.out prof.txt prof.dot
 
 clean:
-	rm -rf $(OBJ) $(LIBDIR) $(EXAMPLES_BIN) $(BENCHMARKS_BIN)
+	@find . -name '*~' -exec rm {} \;
+	@rm -rf $(OBJ) $(OBJDIR) $(EXAMPLES_BIN) $(BENCH_BIN)
 
-.PHONY: all run clean benchmark
+mrproper: clean
+	@rm -rf $(LIBDIR)
