--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -21,6 +21,8 @@ jobs:
     - uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Versions
+      run: pip --version && pip list
     - name: Install
       run: pip install .[ci]
     - name: Test
