--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -16,13 +16,13 @@ jobs:
     steps:
     - name: Checkout repository and submodules
       uses: actions/checkout@v2
-      with:
-          submodules: recursive
     - uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install
-      run: pip install .[ci]
+      run: |
+        pip install wheel
+        pip install .[ci]
     - name: Test
       run: pytest
     - name: Import installed library
