--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,4 @@ build-backend = "setuptools.build_meta"
 [tool.cibuildwheel]
 test-requires = "pytest"
 test-command = "pytest {project}/tests"
+skip = "cp36-*"
