--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,5 @@ build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
 test-requires = "pytest"
-test-command = "pytest {project}/tests"
+test-command = "pytest pytest/"
 skip = "cp36-*"
