Use oldest supported numpy for build.
as recommended in https://scikit-hep.org/developer/packaging

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=38.6.0", "wheel", "numpy", "charset-normalizer"]
+requires = ["setuptools>=38.6.0", "wheel", "oldest-supported-numpy", "charset-normalizer"]
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
