--- a/.github/workflows/build_wheels.yaml
+++ b/.github/workflows/build_wheels.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.12.3
         env:
-          CIBW_SKIP: "pp* *i686*"
+          CIBW_SKIP: "pp* *i686* *musllinux*"
         # # Package the DLL dependencies in the wheel for windows (done by default for the other platforms).
         # # delvewheel cannot mangle the libraries, stripping does not work.
         #   CIBW_BEFORE_BUILD_WINDOWS: pip install delvewheel
