--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -20,10 +20,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install
-      run: |
-        pip install .[ci]
+      run: pip install .[ci]
     - name: Test
-      run: pytest
+      run: cd /tmp/ && pytest $GITHUB_WORKSPACE/pytest/
     - name: Import installed library
       run: cd /tmp/ && python -c 'import capytaine; print(capytaine.__version__)'
     - name: Call command line tool
