Should work better now.

--- a/meson.build
+++ b/meson.build
@@ -23,7 +23,7 @@ incdir_f2py = run_command(py3,
 inc_np = include_directories(incdir_numpy, incdir_f2py)
 
 libDelhommeau_src = [
-      'capytaine/green_functions/libDelhommeau/src/float32.f90',
+      'capytaine/green_functions/libDelhommeau/src/float64.f90',
       'capytaine/green_functions/libDelhommeau/src/constants.f90',
       'capytaine/green_functions/libDelhommeau/src/Delhommeau_integrals.f90',
       'capytaine/green_functions/libDelhommeau/src/old_Prony_decomposition.f90',
@@ -32,21 +32,22 @@ libDelhommeau_src = [
       'capytaine/green_functions/libDelhommeau/src/matrices.f90'
 ]
 
-libDelhommeau_f2py_wrapper = custom_target('libDelhommeaumodule.c',
+libDelhommeau_f2py_wrapper = custom_target('Delhommeau_float64module.c',
                                            input : libDelhommeau_src,
-                                           output : ['libDelhommeaumodule.c', 'libDelhommeau-f2pywrappers2.f90'],
-                                           command : [ py3, '-m', 'numpy.f2py', '@INPUT@', '-m', 'libDelhommeau', '--lower'])
+                                           output : ['Delhommeau_float64module.c', 'Delhommeau_float64-f2pywrappers2.f90'],
+                                           command : [ py3, '-m', 'numpy.f2py', '@INPUT@', '-m', 'Delhommeau_float64', '--lower'])
 
-py3.extension_module('libDelhommeau',
+install_subdir('capytaine', install_dir: py3.get_install_dir(pure: false))
+# Alternatively: would need to list all the .py files and use py3.install_source()
+
+py3.extension_module('Delhommeau_float64',
            libDelhommeau_src,
            libDelhommeau_f2py_wrapper,
            incdir_f2py+'/fortranobject.c',
            include_directories: inc_np,
            dependencies : py3_dep,
            fortran_args : ['-cpp', '-fopenmp'],
+           link_args : ['-fopenmp'],
            install : true,
-           subdir : 'capytaine/green_functions/libDelhommeau/libs/')
+           subdir : 'capytaine/green_functions/libs/')
 
-install_subdir('capytaine', install_dir: py3.get_install_dir(pure: false))
-
-# Alternatively: would need to list all the .py files and use py3.install_source()
