Complete meson.build with other variants of the library.

--- a/meson.build
+++ b/meson.build
@@ -23,27 +23,42 @@ incdir_f2py = run_command(py3,
 inc_np = include_directories(incdir_numpy, incdir_f2py)
 
 libDelhommeau_src = [
-      'capytaine/green_functions/libDelhommeau/src/float64.f90',
       'capytaine/green_functions/libDelhommeau/src/constants.f90',
       'capytaine/green_functions/libDelhommeau/src/Delhommeau_integrals.f90',
       'capytaine/green_functions/libDelhommeau/src/old_Prony_decomposition.f90',
       'capytaine/green_functions/libDelhommeau/src/Green_Rankine.f90',
       'capytaine/green_functions/libDelhommeau/src/Green_wave.f90',
-      'capytaine/green_functions/libDelhommeau/src/matrices.f90'
+      'capytaine/green_functions/libDelhommeau/src/matrices.f90',
 ]
 
-libDelhommeau_f2py_wrapper = custom_target('Delhommeau_float64module.c',
-                                           input : libDelhommeau_src,
+float32 = ['capytaine/green_functions/libDelhommeau/src/float32.f90',]
+float64 = ['capytaine/green_functions/libDelhommeau/src/float64.f90',]
+
+Delhommeau_float32_f2py_wrapper = custom_target('Delhommeau_float32module.c',
+                                           input : float32 + libDelhommeau_src,
+                                           output : ['Delhommeau_float32module.c', 'Delhommeau_float32-f2pywrappers2.f90'],
+                                           command : [ py3, '-m', 'numpy.f2py', '@INPUT@', '-m', 'Delhommeau_float32', '--lower'])
+
+XieDelhommeau_float32_f2py_wrapper = custom_target('XieDelhommeau_float32module.c',
+                                           input : float32 + libDelhommeau_src,
+                                           output : ['XieDelhommeau_float32module.c', 'XieDelhommeau_float32-f2pywrappers2.f90'],
+                                           command : [ py3, '-m', 'numpy.f2py', '@INPUT@', '-m', 'XieDelhommeau_float32', '--lower'])
+
+Delhommeau_float64_f2py_wrapper = custom_target('Delhommeau_float64module.c',
+                                           input : float64 + libDelhommeau_src,
                                            output : ['Delhommeau_float64module.c', 'Delhommeau_float64-f2pywrappers2.f90'],
                                            command : [ py3, '-m', 'numpy.f2py', '@INPUT@', '-m', 'Delhommeau_float64', '--lower'])
+
+XieDelhommeau_float64_f2py_wrapper = custom_target('XieDelhommeau_float64module.c',
+                                           input : float64 + libDelhommeau_src,
+                                           output : ['XieDelhommeau_float64module.c', 'XieDelhommeau_float64-f2pywrappers2.f90'],
+                                           command : [ py3, '-m', 'numpy.f2py', '@INPUT@', '-m', 'XieDelhommeau_float64', '--lower'])
 
 install_subdir('capytaine', install_dir: py3.get_install_dir(pure: false))
 # Alternatively: would need to list all the .py files and use py3.install_source()
 
-py3.extension_module('Delhommeau_float64',
-           libDelhommeau_src,
-           libDelhommeau_f2py_wrapper,
-           incdir_f2py+'/fortranobject.c',
+py3.extension_module('Delhommeau_float32',
+           float32, libDelhommeau_src, Delhommeau_float32_f2py_wrapper, incdir_f2py+'/fortranobject.c',
            include_directories: inc_np,
            dependencies : py3_dep,
            fortran_args : ['-cpp', '-fopenmp'],
@@ -51,3 +66,29 @@ py3.extension_module('Delhommeau_float64',
            install : true,
            subdir : 'capytaine/green_functions/libs/')
 
+py3.extension_module('Delhommeau_float64',
+           float64, libDelhommeau_src, Delhommeau_float64_f2py_wrapper, incdir_f2py+'/fortranobject.c',
+           include_directories: inc_np,
+           dependencies : py3_dep,
+           fortran_args : ['-cpp', '-fopenmp'],
+           link_args : ['-fopenmp'],
+           install : true,
+           subdir : 'capytaine/green_functions/libs/')
+
+py3.extension_module('XieDelhommeau_float32',
+           float32, libDelhommeau_src, XieDelhommeau_float32_f2py_wrapper, incdir_f2py+'/fortranobject.c',
+           include_directories: inc_np,
+           dependencies : py3_dep,
+           fortran_args : ['-cpp', '-fopenmp', '-DXIE_CORRECTION'],
+           link_args : ['-fopenmp'],
+           install : true,
+           subdir : 'capytaine/green_functions/libs/')
+
+py3.extension_module('XieDelhommeau_float64',
+           float64, libDelhommeau_src, XieDelhommeau_float64_f2py_wrapper, incdir_f2py+'/fortranobject.c',
+           include_directories: inc_np,
+           dependencies : py3_dep,
+           fortran_args : ['-cpp', '-fopenmp', '-DXIE_CORRECTION'],
+           link_args : ['-fopenmp'],
+           install : true,
+           subdir : 'capytaine/green_functions/libs/')
